--- a/src/screens/backdrop.css
+++ b/src/screens/backdrop.css
@@ -1,23 +1,34 @@
 .backdrop {
-    position: relative;
+    position: absolute;
+    width: 100%;
+    background-color: transparent; /* Set the background color to transparent */
 }
+
 
 .gradient-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0);
+    height: 100vh;
+    background: rgba(0, 0, 0, 0);
     background-image: linear-gradient(
         to top,
-        rgba(0,0,0,0.8)0,
-        rgba(0,0,0,0)50%,
-        rgba(0,0,0,0.8)
+        rgba(0, 0, 0, 0.8) 0%,
+        rgba(0, 0, 0, 0) 50%,
+        rgba(0, 0, 0, 0.8) 100%
     );
 }
+    
 
 .backdrop_cover_img1 {
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    background-image: url('https://4kwallpapers.com/images/wallpapers/among-us-minimal-colorful-space-5k-8k-amoled-3840x2160-4081.png');
+    background-size: cover;
+    background-position: center;
 }
