--- a/src/screens/herostyles.css
+++ b/src/screens/herostyles.css
@@ -1,19 +1,35 @@
+.hero_bg{
+    position: absolute;
+    top:160px;
+    left:150px;
+
+}
+
 .hi_img{
-    position:absolute;
-    right:100px;
-    top:300px;
+    position: absolute;
+    left:980px;
+    top:90px;
     height: 250px;
+    animation: floating 3s ease-in-out infinite
+}
+
+@keyframes floating {
+    0% {
+        transform: translate(0, 0);
+    }
+    50% {
+        transform: translate(0, 20px);
+    }
+    100% {
+        transform: translate(0, 0);
+    }
 }
 
 .hero_content{
     display: flex;
     flex-direction: column;
-    position: absolute;
     align-items: left;
-    top:160px;
-    left:150px;
     font-size: 2rem;
-    color:aquamarine;
     font-family: var(--font-inter), ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
     Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -23,8 +39,7 @@
     font-size: 6rem;
     margin-bottom: 0%;
     background-color: #f3ec78;
-    background-image: linear-gradient(45deg, #F6F6F6 , #88FFF7);
-    background-size: 100%;
+    background-image: linear-gradient(60deg, #F6F6F6 , #88FFF7);
     background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent; 
@@ -33,14 +48,18 @@
 
 .hero_content h4 {
     margin-top: 0px;
+    margin-left: 15px;
     margin-bottom: 20px;
     font-weight: 200;
-    background-image: linear-gradient(45deg, #F6F6F6 , #97FEED);
-    background-size: 100%;
+    background-image: linear-gradient(180deg, #F6F6F6 , #97FEED);
     background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
+}
+
+.buttons{
+    display: flex;
 }
 
 .contact_button{
@@ -56,8 +75,33 @@
     transition: all 0.25s ease;
 }
 
+.resume{
+    padding: 15px;
+    margin-left: 25px;
+    width: 150px;
+    background-color:rgb(255, 0, 123);
+    color:#F6F6F6;
+    font-size: medium;
+    font-weight: 600;
+    border-radius: 50px;
+    cursor: pointer;
+    border: none ;
+    transition: all 0.25s ease;
+}
+
 .contact_button:hover{
     transform:scale(1.05);
     transition-duration: 50ms;
-    background-color:#F94C10;
+    color:#F94C10;
+    background-color: #F6F6F6;
 }
+
+
+.resume:hover{
+    transform:scale(1.05);
+    transition-duration: 50ms;
+    color:rgb(255, 0, 123);
+    background-color: #F6F6F6;
+}
+
+
